change Registration text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="courses-section">
         <div class="header-container">
             <h2>MASTER 3D design with our one-month tutorial</h2>
-            <img src="./img/logo2.jpg" alt="logo" class="logo">
+             <img src="./img/logo2.jpg" alt="logo" class="logo"> 
         </div>
 
         <div class="courses">
@@ -26,6 +26,7 @@
                     <li>Zoom Class holds - Tuesdays and Fridays</li>
                     <li>Time - 12noon lasts for 40 minutes</li>
                     <li>Fees - ₦100,000</li>
+                    <li>Registration - ₦5,000</li>
                 </ul>
             </div>
 
@@ -54,7 +55,7 @@
     <section class="curriculum-container">
         <div class="header-container">
             <h2>Our Curriculum</h2>
-            <img src="./img/logo2.jpg" alt="logo" class="logo">
+            <!-- <img src="./img/logo2.jpg" alt="logo" class="logo"> -->
         </div>
 
         <div class="curriculums">
