added some new texts

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
                     <li>Time - 12noon lasts for 40 minutes</li>
                     <li>Fees - ₦100,000</li>
                     <li>Registration - ₦5,000</li>
+                    <li><h3>Please kindly pay to this account</h3></li>
+                    <li>Bank - First bank</li>
+                    <li>Account no - 3077783595</li>
+                    <li>Name - Onyigbuo Pamela Amarachi</li>
+                    <li>After payment, kindly send your</li>
+                    <li>Receipt for confirmation</li>
+                    <li>Full name</li>
+                    <li>WhatsApp number</li>
                 </ul>
             </div>
 
@@ -55,7 +63,7 @@
     <section class="curriculum-container">
         <div class="header-container">
             <h2>Our Curriculum</h2>
-            <!-- <img src="./img/logo2.jpg" alt="logo" class="logo"> -->
+            <img src="./img/logo2.jpg" alt="logo" class="logo">
         </div>
 
         <div class="curriculums">
