add some new texts

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     <li>Time - 12noon lasts for 40 minutes</li>
                     <li>Fees - ₦100,000</li>
                     <li>Registration - ₦5,000</li>
-                    <li><h3>Please kindly pay to this account</h3></li>
+                    <li><h3>N/B - Please kindly pay to this account</h3></li>
                     <li>Bank - First bank</li>
                     <li>Account no - 3077783595</li>
                     <li>Name - Onyigbuo Pamela Amarachi</li>
-                    <li>After payment, kindly send your</li>
+                    <li>After payment, kindly send your;</li>
                     <li>Receipt for confirmation</li>
                     <li>Full name</li>
                     <li>WhatsApp number</li>
